--- a/.github/workflows/pr-test-build-ubuntu.yml
+++ b/.github/workflows/pr-test-build-ubuntu.yml
@@ -37,7 +37,7 @@ jobs:
       - name: 'set up docker buildx'
         uses: docker/setup-buildx-action@v3
 
-      - name: 'test-build'
+      - name: 'test build'
         uses: docker/bake-action@v5
         with:
           targets: test
