--- a/debian/Dockerfile.debian
+++ b/debian/Dockerfile.debian
@@ -4,8 +4,7 @@ FROM docker.io/debian:bullseye AS base
 
 USER root
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get install -y --no-install-recommends locales-all \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends locales-all \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
