--- a/.github/workflows/build-push-alpine.yml
+++ b/.github/workflows/build-push-alpine.yml
@@ -54,9 +54,9 @@ jobs:
 
         id: extract_version
         run: |
-          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.alpine)
-          echo "DOCKER_TAG=${DOCKER_TAG#v}" >> $GITHUB_ENV
-          echo "DOCKER_TAG=${DOCKER_TAG#v}"
+          DOCKER_IMAGE_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.alpine)
+          echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG#v}" >> $GITHUB_ENV
+          echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG#v}"
 
       - name: 'create ecr-public repository'
         run: |
